started form page

--- a/about.html
+++ b/about.html
@@ -16,45 +16,30 @@
     <title>Samuel Kingston | Photographer</title>
   </head>
   <body>
-    <header id="home" class="header">
-      <!-- ===== NAVIGATION ===== -->
-      <div class="menu-wrap">
-        <input type="checkbox" class="menu-wrap__toggler" />
-        <div class="menu-wrap__hamburger">
-          <div></div>
-        </div>
-        <div class="menu-wrap__menu">
+    <!-- ===== NAVIGATION ===== -->
+    <div class="menu-wrap">
+      <input type="checkbox" class="menu-wrap__toggler" />
+      <div class="menu-wrap__hamburger">
+        <div></div>
+      </div>
+      <div class="menu-wrap__menu">
+        <div>
           <div>
-            <div>
-              <ul>
-                <li>01 <a href="#home">Home</a></li>
-                <li>02 <a href="about.html">About</a></li>
-                <li>03 <a href="#photography">Photography</a></li>
-                <li>04 <a href="#contact">Contact</a></li>
-              </ul>
-            </div>
+            <ul>
+              <li>01 <a href="index.html">Home</a></li>
+              <li>02 <a href="#about">About</a></li>
+              <li>03 <a href="#photography">Photography</a></li>
+              <li>04 <a href="#">Contact</a></li>
+            </ul>
           </div>
         </div>
       </div>
-      <!-- ===== LOGO ===== -->
-      <h4 class="logo"><em>king</em>ston</h4>
-      <!-- ===== NAV ===== -->
-      <p class="scroll-nav">&larr; scroll to see more &rarr;</p>
-      <!-- ===== HEADER ===== -->
-      <div class="header__text-box">
-        <h1 class="heading-primary">
-          <span class="heading-primary-main">Sam<em>uel</em></span>
-          <span class="heading-primary-sub"><em>King</em>ston</span>
-          <span class="chapter-number">01</span>
-          <p class="season">winter collection 2020</p>
-        </h1>
-        <!-- ===== BUTTON ===== -->
-        <a href="#photography" class="btn btn__blur">SEE COLLECTION</a>
-      </div>
-    </header>
-    <!-- ===== MAIN SECTIONS ===== -->
+    </div>
+    <!-- ===== LOGO ===== -->
+    <h4 class="logo"><em>king</em>ston</h4>
+    <!-- ===== ABOUT SECTION ===== -->
     <main>
-      <section id="about" class="section-about">
+      <section class="section-about">
         <div class="row">
           <h2 class="section-heading">
             <span class="chapter-number">02</span>About
@@ -143,70 +128,6 @@
             </p>
             <br />
           </div>
-        </div>
-      </section>
-
-      <section id="photography" class="section-photography">
-        <div class="row">
-          <h2 class="section-heading">
-            <span class="chapter-number">03</span>Photography
-          </h2>
-          <div class="col-1-of-4">
-            <h3>SOME HEADING HERE</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus
-              porro sed amet hic dolores accusamus corrupti voluptas illo eius
-              maxime recusandae explicabo odit provident eum debitis consectetur
-              aliquam, nam repellendus ab, neque eligendi unde animi soluta?
-              Dolorum quasi velit sapiente voluptatum deleniti id quod. Minus
-              dolor debitis iusto optio nesciunt.
-            </p>
-            <br />
-          </div>
-          <div class="col-1-of-4">
-            <h3>SOME HEADING HERE</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus
-              porro sed amet hic dolores accusamus corrupti voluptas illo eius
-              maxime recusandae explicabo odit provident eum debitis consectetur
-              aliquam, nam repellendus ab, neque eligendi unde animi soluta?
-              Dolorum quasi velit sapiente voluptatum deleniti id quod. Minus
-              dolor debitis iusto optio nesciunt.
-            </p>
-            <br />
-          </div>
-          <div class="col-1-of-4">
-            <h3>SOME HEADING HERE</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus
-              porro sed amet hic dolores accusamus corrupti voluptas illo eius
-              maxime recusandae explicabo odit provident eum debitis consectetur
-              aliquam, nam repellendus ab, neque eligendi unde animi soluta?
-              Dolorum quasi velit sapiente voluptatum deleniti id quod. Minus
-              dolor debitis iusto optio nesciunt.
-            </p>
-            <br />
-          </div>
-          <div class="col-1-of-4">
-            <h3>SOME HEADING HERE</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus
-              porro sed amet hic dolores accusamus corrupti voluptas illo eius
-              maxime recusandae explicabo odit provident eum debitis consectetur
-              aliquam, nam repellendus ab, neque eligendi unde animi soluta?
-              Dolorum quasi velit sapiente voluptatum deleniti id quod. Minus
-              dolor debitis iusto optio nesciunt.
-            </p>
-            <br />
-          </div>
-        </div>
-      </section>
-
-      <section id="contact" class="section-contact">
-        <div class="row">
-          <h2 class="section-heading">
-            <span class="chapter-number">04</span>Contact
-          </h2>
         </div>
       </section>
     </main>
