--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div>
               <ul>
                 <li>01 <a href="#home">Home</a></li>
-                <li>02 <a href="about.html">About</a></li>
+                <li>02 <a href="#about">About</a></li>
                 <li>03 <a href="#photography">Photography</a></li>
                 <li>04 <a href="#contact">Contact</a></li>
               </ul>
@@ -207,6 +207,45 @@
           <h2 class="section-heading">
             <span class="chapter-number">04</span>Contact
           </h2>
+          <div class="contact">
+            <div class="contact__form">
+              <form action="#" class="form">
+                <div class="form__group">
+                  <input
+                    type="text"
+                    id="name"
+                    class="form__input"
+                    placeholder="Full Name"
+                    required
+                  />
+                  <label for="name" class="form__label">Full name</label>
+                </div>
+                <div class="form__group">
+                  <input
+                    type="email"
+                    id="email"
+                    class="form__input"
+                    placeholder="Email Address"
+                    required
+                  />
+                  <label for="name" class="form__label">Email address</label>
+                </div>
+                <div class="form__group">
+                  <textarea
+                    type="text"
+                    id="textarea"
+                    class="form__input"
+                    placeholder="Send a message"
+                    required
+                  /></textarea>
+                  <label for="textarea" class="form__label">Send a message</label>
+                </div>
+                <div class="form__group">
+                  <button class="btn btn__white">SEND</button>
+                </div>
+              </form>
+            </div>
+          </div>
         </div>
       </section>
     </main>
